--- a/chinook_data_analysis/03 jupyter file/chinook_data.ipynb
+++ b/chinook_data_analysis/03 jupyter file/chinook_data.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\IHC\\AppData\\Local\\Temp\\ipykernel_8024\\1480886009.py:16: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\IHC\\AppData\\Local\\Temp\\ipykernel_13508\\1480886009.py:16: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  chinook[table] = pd.read_sql(query, connection)\n"
      ]
     },
@@ -147,7 +147,13 @@
       "Loaded customer.\n",
       "Loaded employee.\n",
       "Loaded genre.\n",
-      "Loaded invoice.\n",
+      "Loaded invoice.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Loaded invoiceline.\n",
       "Loaded mediatype.\n",
       "Loaded playlist.\n",
@@ -186,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2846,13 +2852,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "به طور کلی، تحلیل شما نشان می‌دهد که پلی‌لیست‌هایی که تنوع بیشتری از ژانرهای موسیقی دارند، معمولاً تعداد بیشتری از آهنگ‌ها را نیز شامل می‌شوند. این ممکن است به این معنا باشد که کاربرانی که به کشف سبک‌های مختلف موسیقی علاقه‌مند هستند، به طور کلی پلی‌لیست‌های بیشتری با محتوای زیاد گوش می‌دهند یا ایجاد می‌کنند."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -3036,22 +3035,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average number of tracks purchased per invoice: 37.97\n",
+      "Average number of tracks purchased per Customer: 37.97\n",
       "95% confidence interval: (37.90, 38.03)\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "merged_df = invoice.merge(invoice_line,on= 'InvoiceId' )\n",
     "# Count the number of tracks bought in each invoice  \n",
-    "invoice_track_counts = merged_df.groupby('CustomerId')['TrackId'].count().reset_index(name='TracksPurchased')  \n",
+    "invoice_track_counts = merged_df.groupby('CustomerId')['TrackId'].count().reset_index(name='TracksPurchased') \n",
+    " \n",
     "# Calculate the mean and standard deviation  \n",
     "mean_tracks = invoice_track_counts['TracksPurchased'].mean()  \n",
     "std_tracks = invoice_track_counts['TracksPurchased'].std()  \n",
@@ -3067,7 +3067,7 @@
     "upper_bound = mean_tracks + margin_of_error  \n",
     "\n",
     "# Display results  \n",
-    "print(f'Average number of tracks purchased per invoice: {mean_tracks:.2f}')  \n",
+    "print(f'Average number of tracks purchased per Customer: {mean_tracks:.2f}')  \n",
     "print(f'95% confidence interval: ({lower_bound:.2f}, {upper_bound:.2f})')"
    ]
   }
