change file adress

--- a/notebooks/chinook_data.ipynb
+++ b/notebooks/chinook_data.ipynb
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(r'F:\\daneshkar\\final project\\1.json', 'r') as config_file:\n",
+    "with open(r'F:\\daneshkar\\my github\\Chinook_project\\1.json', 'r') as config_file:\n",
     "    db_config = json.load(config_file)"
    ]
   },
